fix hover on mobile

--- a/style.css
+++ b/style.css
@@ -67,15 +67,6 @@ body {
     transition: all 0.3s ease-out;
 }
 
-#left > p:hover {
-    background: rgba(255, 255, 255)!important;
-    color: black;
-}
-
-#left > p.user-output:hover {
-    background: rgb(64, 161, 218)!important;
-}
-
 .buttons-container {
     display: grid;
 
@@ -108,10 +99,6 @@ body {
     cursor: pointer;
 }
 
-.buttons-container > div:hover {
-    opacity: 0.8;
-}
-
 .grid-container {
     display: grid;
     padding: 20px;
@@ -133,10 +120,6 @@ body {
     transition: all 0.5s ease-out;
 
     grid-template-columns: auto auto auto auto;
-}
-
-.f > div:hover {
-    transform: scale(1.1);
 }
 
 .n {
@@ -190,23 +173,6 @@ body {
     top: 0;
     right: 0;
     opacity: 1;
-}
-
-.n > div:hover {
-    background: white;
-    transform: scale(1.12);
-}
-
-.n > div.questionable:hover {
-    background: rgb(255, 229, 115);
-}
-
-.n > div.rejected:hover {
-    background: rgb(255, 139, 118);
-}
-
-.n > div.ok:hover {
-    background: rgb(172, 255, 124);
 }
 
 #lastp {
@@ -302,5 +268,77 @@ body {
     .n > div:active {
         background: white;
         transform: scale(1.12);
+    }
+}
+
+@media (hover:hover) {
+    .n > div:hover {
+        background: white;
+        transform: scale(1.12);
+    }
+
+    .n > div.questionable:hover {
+        background: rgb(255, 229, 115);
+    }
+
+    .n > div.rejected:hover {
+        background: rgb(255, 139, 118);
+    }
+
+    .n > div.ok:hover {
+        background: rgb(172, 255, 124);
+    }
+
+    #left > p:hover {
+        background: rgba(255, 255, 255)!important;
+        color: black;
+    }
+
+    #left > p.user-output:hover {
+        background: rgb(64, 161, 218)!important;
+    }
+
+    .buttons-container > div:hover {
+        opacity: 0.8;
+    }
+
+    .f > div:hover {
+        transform: scale(1.1);
+    }
+}
+
+@media (hover:none) {
+    .n > div:active {
+        background: white;
+        transform: scale(0.95);
+    }
+
+    .n > div.questionable:active {
+        background: rgb(236, 184, 41);
+    }
+
+    .n > div.rejected:active {
+        background: rgb(252, 81, 59);
+    }
+
+    .n > div.ok:active {
+        background: rgb(90, 211, 20);
+    }
+
+    #left > p:active {
+        background: rgba(255, 255, 255)!important;
+        color: black;
+    }
+
+    #left > p.user-output:active {
+        background: rgb(64, 161, 218)!important;
+    }
+
+    .buttons-container > div:active {
+        opacity: 0.8;
+    }
+
+    .f > div:active {
+        transform: scale(0.95);
     }
 }
